--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-ethereum-wallet": "^1.3.2",
     "node-json-rpc": "0.0.1",
     "request": "^2.88.0",
-    "web3": "^1.0.0-beta.55"
+    "web3": "^1.0.0-beta.55",
+    "cron": "^1.7.1"
   }
 }
