--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-json-rpc": "0.0.1",
     "request": "^2.88.0",
     "web3": "^1.0.0-beta.55",
+    "moment": "^2.24.0",
     "cron": "^1.7.1"
   }
 }
