--- a/config.json
+++ b/config.json
@@ -123,6 +123,9 @@
     /** Port for getting debug info.
 		Do not set for live bots, use only for debugging.
 		Allows to get DBs records like http://ip:port/db?tb=incomingTxsDb **/
-	"api": false
-
+	"api": false,
+  /** The software will use verbosity according to log_level.
+    	It can be none < error < warn < info < log.
+  	**/
+  "log_level": "log"
 }
