--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "adamant-api": "^0.1.22",
+    "adamant-api": "^1.5.0",
+    "axios": "^0.27.2",
     "cron": "^1.7.1",
-    "ethereumjs-tx": "^2.0.0",
-    "ethereumjs-util": "^6.1.0",
-    "express": "^4.17.1",
-    "jsonminify": "^0.4.1",
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^7.1.5",
+    "express": "^4.18.1",
+    "jsonminify": "^0.4.2",
     "jsonrpc-client": "^0.1.1",
-    "moment": "^2.24.0",
-    "mongodb": "^3.2.6",
-    "node-ethereum-wallet": "^1.3.2",
+    "moment": "^2.29.4",
+    "mongodb": "^4.8.1",
+    "node-ethereum-wallet": "^1.4.3",
     "node-json-rpc": "0.0.1",
     "request": "^2.88.0",
-    "web3": "^1.0.0-beta.55"
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
