--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adamant-bet",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "Anonymous and Blockchain-proved betting software",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,32 +9,55 @@
     "lint": "eslint . --ext .js --ignore-pattern node_modules/",
     "lint:fix": "eslint . --fix --ext .js --ignore-pattern node_modules/"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "ADAMANT Foundation <devs@adamant.im> (https://adamant.im)",
+  "license": "GPL-3.0",
+  "keywords": [
+    "adm",
+    "adamant",
+    "blockchain",
+    "messenger",
+    "bot",
+    "bet",
+    "betting",
+    "crypto",
+    "cryptocurrency",
+    "payout"
+  ],  
   "dependencies": {
     "@liskhq/lisk-cryptography": "^3.2.1",
     "@liskhq/lisk-transactions": "^5.2.2",
     "adamant-api": "^1.5.0",
-    "axios": "^0.27.2",
-    "cron": "^1.7.1",
+    "axios": "^1.1.3",
+    "cron": "^1.8.2",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-util": "^7.1.5",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "jsonminify": "^0.4.2",
     "jsonrpc-client": "^0.1.1",
     "moment": "^2.29.4",
-    "mongodb": "^4.8.1",
+    "mongodb": "^4.11.0",
     "node-ethereum-wallet": "^1.4.3",
     "node-json-rpc": "0.0.1",
     "request": "^2.88.0",
-    "web3": "^1.7.5"
+    "web3": "^1.8.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "eslint": "8.22.0",
+    "eslint": "8.26.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-jest": "^27.0.4",
+    "eslint-plugin-jest": "^27.1.3",
     "husky": "^8.0.1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Adamant-im/adamant-bet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Adamant-im/adamant-bet/issues"
+  },
+  "homepage": "https://github.com/Adamant-im/adamant-bet#readme"
 }
